Fix z-index for a11y toolbar

--- a/assets/src/styles/layouts/_header.scss
+++ b/assets/src/styles/layouts/_header.scss
@@ -151,3 +151,7 @@ body:not(.home) {
     }
   }
 }
+
+.a11y-toolbar {
+  z-index: 9990;
+}
